[gd_scene load_steps=10 format=2]

[ext_resource path="res://Sprites/King.png" type="Texture" id=1]
[ext_resource path="res://Scripts/Pieces/BlackKing.gd" type="Script" id=2]
[ext_resource path="res://Sprites/LocationMove.png" type="Texture" id=3]
[ext_resource path="res://Sounds/move.wav" type="AudioStream" id=4]

[sub_resource type="CircleShape2D" id=1]

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 11.5243, 14.4157 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 13, 13 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16, 16 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 16, 16 )

[node name="BlackKing" type="KinematicBody2D" groups=[
"BlackPiece",
"King",
]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -0.0267692 )
scale = Vector2( 1.3, 1.3 )
texture = ExtResource( 1 )
vframes = 2
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( 0.117989, 0.943874 )
scale = Vector2( 1.2, 1.2 )
shape = SubResource( 2 )

[node name="RayCasts" type="Node2D" parent="."]

[node name="RayCast1" type="RayCast2D" parent="RayCasts"]
rotation = 0.785398
enabled = true
cast_to = Vector2( 30, -30 )

[node name="Area1" type="Area2D" parent="RayCasts/RayCast1"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RayCasts/RayCast1/Area1"]
position = Vector2( 31.5, -31.5 )
rotation = 0.785398
scale = Vector2( 1.2, 1.2 )
shape = SubResource( 3 )

[node name="Sprite" type="Sprite" parent="RayCasts/RayCast1/Area1"]
position = Vector2( 31.1834, -31.1834 )
rotation = 0.785398
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 3 )

[node name="RayCast2" type="RayCast2D" parent="RayCasts"]
scale = Vector2( 1.4, 1.4 )
enabled = true
cast_to = Vector2( 30, -30 )

[node name="Area41" type="Area2D" parent="RayCasts/RayCast2"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RayCasts/RayCast2/Area41"]
position = Vector2( 31.5, -31.5 )
scale = Vector2( 0.85, 0.85 )
shape = SubResource( 3 )

[node name="Sprite2" type="Sprite" parent="RayCasts/RayCast2/Area41"]
position = Vector2( 31.5, -31.5 )
rotation = 1.5708
scale = Vector2( 0.785714, 0.785714 )
texture = ExtResource( 3 )

[node name="RayCast3" type="RayCast2D" parent="RayCasts"]
rotation = 1.57079
scale = Vector2( 1.4, 1.4 )
enabled = true
cast_to = Vector2( 30, -30 )

[node name="Area51" type="Area2D" parent="RayCasts/RayCast3"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RayCasts/RayCast3/Area51"]
position = Vector2( 31.5, -31.5 )
scale = Vector2( 0.85, 0.85 )
shape = SubResource( 3 )

[node name="Sprite3" type="Sprite" parent="RayCasts/RayCast3/Area51"]
position = Vector2( 31.369, -31.4998 )
rotation = 6.07967e-06
scale = Vector2( 0.785714, 0.785714 )
texture = ExtResource( 3 )

[node name="RayCast4" type="RayCast2D" parent="RayCasts"]
rotation = 3.14159
scale = Vector2( 1.4, 1.4 )
enabled = true
cast_to = Vector2( 30, -30 )

[node name="Area61" type="Area2D" parent="RayCasts/RayCast4"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RayCasts/RayCast4/Area61"]
position = Vector2( 31.5, -31.5 )
scale = Vector2( 0.85, 0.85 )
shape = SubResource( 3 )

[node name="Sprite4" type="Sprite" parent="RayCasts/RayCast4/Area61"]
position = Vector2( 31.5374, -31.3687 )
rotation = -1.57079
scale = Vector2( 0.785714, 0.785714 )
texture = ExtResource( 3 )

[node name="RayCast5" type="RayCast2D" parent="RayCasts"]
rotation = -1.57081
scale = Vector2( 1.4, 1.4 )
enabled = true
cast_to = Vector2( 30, -30 )

[node name="Area71" type="Area2D" parent="RayCasts/RayCast5"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RayCasts/RayCast5/Area71"]
position = Vector2( 31.5, -31.5 )
scale = Vector2( 0.85, 0.85 )
shape = SubResource( 3 )

[node name="Sprite5" type="Sprite" parent="RayCasts/RayCast5/Area71"]
position = Vector2( 31.5004, -31.7054 )
rotation = -3.14158
scale = Vector2( 0.785714, 0.785714 )
texture = ExtResource( 3 )

[node name="RayCast6" type="RayCast2D" parent="RayCasts"]
rotation = 2.35619
enabled = true
cast_to = Vector2( 30, -30 )

[node name="Area11" type="Area2D" parent="RayCasts/RayCast6"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RayCasts/RayCast6/Area11"]
position = Vector2( 31.5, -31.5 )
rotation = 0.785398
scale = Vector2( 1.2, 1.2 )
shape = SubResource( 3 )

[node name="Sprite6" type="Sprite" parent="RayCasts/RayCast6/Area11"]
position = Vector2( 31.2205, -31.2202 )
rotation = -0.785394
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 3 )

[node name="RayCast7" type="RayCast2D" parent="RayCasts"]
rotation = -2.3562
enabled = true
cast_to = Vector2( 30, -30 )

[node name="Area21" type="Area2D" parent="RayCasts/RayCast7"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RayCasts/RayCast7/Area21"]
position = Vector2( 31.5, -31.5 )
rotation = 0.785398
scale = Vector2( 1.2, 1.2 )
shape = SubResource( 3 )

[node name="Sprite7" type="Sprite" parent="RayCasts/RayCast7/Area21"]
position = Vector2( 31.5358, -31.5354 )
rotation = -2.35619
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 3 )

[node name="RayCast8" type="RayCast2D" parent="RayCasts"]
rotation = -0.785395
enabled = true
cast_to = Vector2( 30, -30 )

[node name="Area31" type="Area2D" parent="RayCasts/RayCast8"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RayCasts/RayCast8/Area31"]
position = Vector2( 31.5, -31.5 )
rotation = 0.785398
scale = Vector2( 1.2, 1.2 )
shape = SubResource( 3 )

[node name="Sprite8" type="Sprite" parent="RayCasts/RayCast8/Area31"]
position = Vector2( 31.1833, -31.1835 )
rotation = 2.35619
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 3 )

[node name="KillCast" type="RayCast2D" parent="."]
position = Vector2( 0, -17.0586 )
enabled = true
cast_to = Vector2( 0, 20 )

[node name="RightCastleCast" type="RayCast2D" parent="."]
rotation = -1.57079
enabled = true
cast_to = Vector2( 0, 500 )

[node name="LeftCastleCast" type="RayCast2D" parent="."]
rotation = -4.71238
enabled = true
cast_to = Vector2( 0, 500 )

[node name="RightCastleArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightCastleArea"]
position = Vector2( 88.0154, 0 )
shape = SubResource( 4 )

[node name="Sprite9" type="Sprite" parent="RightCastleArea"]
position = Vector2( 88.0154, 0 )
rotation = 1.5708
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 3 )

[node name="LeftCastleArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftCastleArea"]
position = Vector2( -87.704, 0 )
shape = SubResource( 5 )

[node name="Sprite10" type="Sprite" parent="LeftCastleArea"]
position = Vector2( -87.704, -9.36974e-13 )
rotation = 1.5708
scale = Vector2( 1.1, 1.1 )
texture = ExtResource( 3 )

[node name="MoveSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )
volume_db = -15.0
pitch_scale = 0.8
[connection signal="mouse_entered" from="Area2D" to="." method="_on_Area2D_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_Area2D_mouse_exited"]
[connection signal="mouse_entered" from="RayCasts/RayCast1/Area1" to="." method="_on_Area1_mouse_entered"]
[connection signal="mouse_exited" from="RayCasts/RayCast1/Area1" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="RayCasts/RayCast2/Area41" to="." method="_on_Area41_mouse_entered"]
[connection signal="mouse_exited" from="RayCasts/RayCast2/Area41" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="RayCasts/RayCast3/Area51" to="." method="_on_Area51_mouse_entered"]
[connection signal="mouse_exited" from="RayCasts/RayCast3/Area51" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="RayCasts/RayCast4/Area61" to="." method="_on_Area61_mouse_entered"]
[connection signal="mouse_exited" from="RayCasts/RayCast4/Area61" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="RayCasts/RayCast5/Area71" to="." method="_on_Area71_mouse_entered"]
[connection signal="mouse_exited" from="RayCasts/RayCast5/Area71" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="RayCasts/RayCast6/Area11" to="." method="_on_Area11_mouse_entered"]
[connection signal="mouse_exited" from="RayCasts/RayCast6/Area11" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="RayCasts/RayCast7/Area21" to="." method="_on_Area21_mouse_entered"]
[connection signal="mouse_exited" from="RayCasts/RayCast7/Area21" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="RayCasts/RayCast8/Area31" to="." method="_on_Area31_mouse_entered"]
[connection signal="mouse_exited" from="RayCasts/RayCast8/Area31" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="RightCastleArea" to="." method="_on_RightCastleArea_mouse_entered"]
[connection signal="mouse_exited" from="RightCastleArea" to="." method="mouse_exited"]
[connection signal="mouse_entered" from="LeftCastleArea" to="." method="_on_LeftCastleArea_mouse_entered"]
[connection signal="mouse_exited" from="LeftCastleArea" to="." method="mouse_exited"]
